@@ -73,7 +73,7 @@ the author abandon his copyright.
 </p>
 
 </div><p><strong>Copyright notice 1: The Public Domain notice
-
+<a name="public-domain-anchor"></a>
 </strong>
 </p>
 <table class="menu" border="0" cellspacing="0">
