@@ -86,18 +86,18 @@ ul.toc {list-style: none}
 </p>
 <p>First insertcopying:
 </p>
-<a name="SEC_hidden"></a>
+<a name="t_hcopying_HEAD1"></a>
 <h2 class="heading"> in copying @ <em>heading</em> </h2>
 
-<a name="SEC_hidden"></a>
+<a name="t_hcopying_HEAD2"></a>
 <h3 class="subheading"> second in copying @ <em>subheading</em> </h3>
 
 <p>Second insertcopying:
 </p>
-<a name="SEC_hidden"></a>
+<a name="t_hcopying_HEAD1"></a>
 <h2 class="heading"> in copying @ <em>heading</em> </h2>
 
-<a name="SEC_hidden"></a>
+<a name="t_hcopying_HEAD2"></a>
 <h3 class="subheading"> second in copying @ <em>subheading</em> </h3>
 
 <hr size="6">
