@@ -57,14 +57,8 @@ ul.toc {list-style: none}
 <td valign="middle" align="left">[<a href="index_special_region_abt.html#SEC_About" title="About (help)"> ? </a>]</td>
 </tr></table>
 <h1>Footnotes</h1>
-<h3><a name="FOOT1" href="index_special_region.html#DOCF1">(1)</a></h3>
+<h3><a name="t_hcopying_FOOT1" href="index_special_region.html#t_hcopying_DOCF1">(1)</a></h3>
 <p><a name="Public-domain-reference"></a> The public
-domain is something you should allready know
-</p><h3><a name="FOOT1" href="index_special_region.html#DOCF1">(1)</a></h3>
-<p> The public
-domain is something you should allready know
-</p><h3><a name="FOOT1" href="index_special_region_1.html#DOCF1">(1)</a></h3>
-<p> The public
 domain is something you should allready know
 </p><hr size="1">
 <table cellpadding="1" cellspacing="1" border="0">
